typescript/checker/tests/conformance/expressions/unaryOperators/plusOperator/plusOperatorWithNumberType.ts.stderr
error: UselessSeqExpr {
    span: Span {
        lo: BytePos(
            786,
        ),
        hi: BytePos(
            793,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/plusOperator/plusOperatorWithNumberType.ts:41:1
   |
41 | +objA.a, M.n;
   | ^^^^^^^

